LPS-75692 This is no longer necessary since the container is inline-block. Now we could prevent words to be broken without break the original case that force us to introduce this css rule (that messages with @nbsp weren't able to broke the line and shown in a single line overflowing the container)
(cherry picked from commit 594091551da4be15d2bd6db117a960307e1f6beb)

--- a/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
+++ b/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
@@ -107,7 +107,6 @@
 
 	.message-content {
 		display: block;
-		word-break: break-all;
 
 		img {
 			max-width: 100%;
